--- a/images/style.css
+++ b/images/style.css
@@ -229,6 +229,7 @@ p
   margin-top: 80px;
   margin-left: 30px;
   padding-top: 100px;
+  filter: contrast(0) brightness(0) invert(1);
 }
 
 .try-button
@@ -393,14 +394,15 @@ li
 .facebook-button, .twitter-button, .instagram-button
 {
   display: relative;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   padding: 4px;
   border: 1px solid white;
   fill: white;
   background-color: var(--darkcyan);
   align-items: center;
   justify-content: center;
+  
 }
 
 .copyright
@@ -736,7 +738,7 @@ li
   .grow, .flow
   {
     width: 85vw;
-    height: auto;
+    height: 60vh;
     border: none;
     display: grid;
     border-radius: 25px;
@@ -745,12 +747,15 @@ li
     margin-top: 80px;
     margin-bottom: 80px;
     overflow: visible;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 
   .users
   {
     width: 85vw;
-    height: auto;
+    height: 60vh;
     border: none;
     display: grid;
     border-radius: 25px;
@@ -759,6 +764,9 @@ li
     margin-top: 80px;
     margin-bottom: 280px;
     overflow: visible;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 
   .ready
@@ -793,14 +801,15 @@ li
   .flow-img
   {
     width: 30vw;
-    height: auto;
+    height: 48vh;
     right: 175%;
     position: relative;
     align-items: center;
     justify-content: center;
     padding: 40px;
     margin-top: -100px;
-    margin-bottom: 30px;
+    margin-left: 7.5%;
+    bottom: 50px;
     grid-area: box1;
   }
 
